Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/ObjectMembers.out
ObjectMembers.java:10:16: compiler.err.no.annotation.member: hashCode, ObjectMembers
1 error
